--- a/Omnie.html
+++ b/Omnie.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <title>Witaj na mojej stronie domowej</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
 
 </head>
 
