--- a/form.html
+++ b/form.html
@@ -28,7 +28,7 @@
         <li>telefon</li>
     </ul>
 </h2>
-    <form>
+    <form action="/Omnie" method="post">
         <label>
             <input type = "textarea" >
             <input type = "submit" value="Prześlij">
